# fullcycle_kubernetes_module

./: server.go
k8s/: configmap-env.yaml  configmap-family.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pod.yaml  replicaset.yaml  secret.yaml  service.yaml  statefulset.yaml
k8s/namespaces/: deployment.yaml  security.yaml
k8s/persistent volumes/: pv.yaml
python/: Dockerfile  main.py  pyproject.toml
