[tool.poetry]
name = "python-webserver"
version = "0.1.0"
description = ""
authors = ["CassiusThalles <cassiustcmendes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.101.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
